--- a/order-i3-xfce.opam
+++ b/order-i3-xfce.opam
@@ -19,4 +19,11 @@ build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
 ]
-
+url {
+  src:
+    "https://github.com/EmileTrotignon/order-i3-xfce/archive/0.1.tar.gz"
+  checksum: [
+    "md5=db3de0bbbce508e21fcbf37cfdc157ee"
+    "sha512=89b6dee06fd9a628f6fa50cd805e507b4fd497010bb486bc070078f20c1aceddbdda36a3d492ea6c3efd65c1f4e542e7f3ca6e1e44d8524b54dfb1b61884d82b"
+  ]
+}
